Added Postman collection that tests all api endpoints and fixed some bugs
